--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -6,7 +6,7 @@ name: app
 
 # The runtime the application uses.
 # Complete list of available runtimes: https://docs.platform.sh/create-apps/app-reference.html#types
-type: 'php:8.1'
+type: 'php:8.3'
 
 # Specifies a default set of build tasks to run. Flavors are language-specific.
 # More information: https://docs.platform.sh/create-apps/app-reference.html#build
@@ -21,7 +21,8 @@ dependencies:
     php:
         composer/composer: '^2'
         wp-cli/wp-cli-bundle: "^2.4.0"
-
+    ruby:
+        "wkhtmltopdf-binary": "> 0.12.6"
 # Hooks allow you to customize your code/environment as the project moves through the build and deploy stages
 # More info:
 hooks:
